Add PoC for dynamic filtering
